# securechat

client/: Cargo.toml
server/: Cargo.toml
server/src/: auth.rs  db.rs  encryption.rs  main.rs  message.rs
shared/: Cargo.toml
shared/src/: crypto.rs  models.rs
