[package]
name = "client"
version = "0.1.0"
edition = "2021"

[dependencies]
shared = { path = "../shared" }
tokio = { version = "1", features = ["full"] }
ratatui = "0.23"
crossterm = "0.27"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
reqwest = { version = "0.11", features = ["json"] }
uuid = { version = "1.3", features = ["v4", "serde"] }
anyhow = "1.0"
async-trait = "0.1"
dirs = "5.0"
chrono = { version = "0.4", features = ["serde"] }
rand = "0.8"
ring = "0.16"
thiserror = "1.0"
tokio-tungstenite = { version = "0.20", features = ["native-tls"] }
futures-util = "0.3"
tui-textarea = "0.2"